Closed Bug 93240 Opened 25 years ago Closed 24 years ago

Installer window too narrow; License text wraps

Categories

(SeaMonkey :: Installer, defect)

x86
Linux
defect
Not set
trivial

Tracking

(Not tracked)

VERIFIED FIXED
mozilla1.0

People

(Reporter: mozilla, Assigned: slogan)

Details

(Whiteboard: [correctness])

Attachments

(1 file)

The license text displayed when the installer is run is formatted for at 76 columns, but the window that displays the text is only 67 columns wide.
Assignee: ssu → syd
reassigning to Syd.
very ugly, hopefully not too hard to fix without triggering re-formatting all the other wizard pages.
Status: UNCONFIRMED → NEW
Ever confirmed: true
Keywords: nsBranch
Would it also be possible to get rid of the little arrow to indicate word-wrapping? I don't see that it's really necessary, and most programs don't do that. Although it does add some value, I don't see that it's necessary to see the distinction between a newline and line wrapping in a web browser or for a simple text display.
QA Contact: gemal → gbush
nsbranch+ per pdt triage is it beta or final license? should we take this under install drop?
Keywords: nsbranch → nsbranch+
Summary: Installer window too narrow; text wraps → Installer window too narrow; License text wraps
This looks like polish work. Is this really a stop ship?
Jaime, if it impacts a user's ability to see the license then it would open us up to legal problems we can't afford. Even if it's OK on US builds, the issue still comes up on international builds. Maybe it's not stop-ship, need to know what happens to the user experience first.
Entire license can be read, first 5 or 10 lines have arrows showing wrap. Window can be enlarged - slightly - shows license without arrows
Adding correctness Status Whiteboard, correct/expected behavior does not occur.
Whiteboard: [correctness]
PDT-. No patch, too late for cosmetic changes. If you have a *strong* argument why this should be pursued further, please add it here and remove the PDT-.
Whiteboard: [correctness] → [correctness] PDT-
Keywords: nsbranch+ → nsbranch-
Blocks: 107067
Keywords: nsbranch-
Target Milestone: --- → M1
Target Milestone: M1 → Future
This something we would like to take for an earlier release. Can we get it in for MachV. Nominating ...
Keywords: nsbeta1
Whiteboard: [correctness] PDT- → [correctness]
No longer blocks: 107067
Status: NEW → ASSIGNED
Keywords: nsbeta1 → nsbeta1+
Target Milestone: Future → mozilla1.0
only remaining thing to do would be the format the license text to get rid of the end of line characters so it lays out better. But at least now the black arrows are gone, and the text is all readable.
Comment on attachment 68285 [details] [diff] [review] in with word wrap and line wrap, out with the annoying arrows sr=dveditz
Attachment #68285 - Flags: superreview+
Attachment #68285 - Flags: review+
fixed
Status: ASSIGNED → RESOLVED
Closed: 24 years ago
Resolution: --- → FIXED
verified on 2/20 trunk build
Status: RESOLVED → VERIFIED
Product: Browser → Seamonkey
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: