Fixes for following Linux installer bugs:

http://bugzilla.mozilla.org/show_bug.cgi?id=93240 -- installer window too
narrow for license text
http://bugzilla.mozilla.org/show_bug.cgi?id=98201 -- cancel button does not
respond
http://bugzilla.mozilla.org/show_bug.cgi?id=108282 -- crasher, calling gtk+
function with NULL argument
http://bugzilla.mozilla.org/show_bug.cgi?id=113997 -- mozilla installer
eats 100% CPU