xpinstall/wizard/unix/src2/nsLicenseDlg.cpp
@@ -156,6 +156,8 @@ nsLicenseDlg::Show(int aDirection)
         GtkWidget *text = gtk_text_new(NULL, NULL);
         GdkFont *font = gdk_font_load( LICENSE_FONT );
         gtk_text_set_editable(GTK_TEXT(text), FALSE);
+        gtk_text_set_word_wrap(GTK_TEXT(text), TRUE);
+        gtk_text_set_line_wrap(GTK_TEXT(text), TRUE);
         gtk_table_attach(GTK_TABLE(mTable), text, 1, 2, 0, 1,
             static_cast<GtkAttachOptions>(GTK_FILL | GTK_EXPAND),
             static_cast<GtkAttachOptions>(GTK_FILL | GTK_EXPAND),
